# docuextract-ai

./: .gitignore  App.tsx  README.md  fluttering-snuggling-comet.md  index.html  package.json  pyproject.toml  run_backend.sh  types.ts
backend/: __init__.py  database.py  extraction.py  main.py  models.py  pdf_parser.py
components/: FileSidebar.tsx  FileUpload.tsx  ResultsTable.tsx
services/: backendService.ts
tests/: __init__.py  conftest.py  test_api.py  test_database.py  test_extraction.py  test_models.py  test_pdf_parser.py
